--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <title>Redirecting...</title>
     <script>
       // Redirect to the root URL
-      window.location.replace("/maknirenov");
+      window.location.replace("/");
     </script>
   </head>
   <body>
